🔧 (.gitignore): add inventory.ini to gitignore to prevent accidental commits of inventory files 🔧 (ansible): add environment variable validation to all deployment playbooks to ensure required variables are set before execution ✨ (ansible): add new cert-manager deployment playbook for standalone cert-manager installation ♻️ (ansible): update cert-manager CRDs configuration from installCRDs to crds.enabled for consistency with new playbook
✨ (ansible): add new playbooks for deploying rancher, sealed-secrets, and traefik
🔧 (ansible): add environment variable validation to all playbooks for better error handling
🔧 (helm-charts): add traefik values configuration for daemonset deployment with host networking

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ log/
 ansible*.cfg.tmp
 # Ansible local directory (created by ansible-playbook --connection=local)
 .ansible/
+inventory.ini
 
 # Kubernetes/Helm
 # Helm chart packages
