--- a/ansible/playbooks/deploy-traefik.yml
+++ b/ansible/playbooks/deploy-traefik.yml
@@ -1,4 +1,4 @@
-- name: Deploy Victoria Metrics
+- name: Deploy Traefik Ingress Controller
   hosts: localhost
   connection: local
   gather_facts: false
@@ -12,15 +12,14 @@
         fail_msg: "KUBECONFIG and HELM_CHARTS_PATH environment variables must be set"
 
   tasks:
-    - name: Deploy Victoria Metrics
+    - name: Install Traefik Ingress Controller
       kubernetes.core.helm:
-        name: victoria-metrics
-        chart_ref: oci://ghcr.io/victoriametrics/helm-charts/victoria-metrics-cluster
-        chart_version: "0.31.0"
-        release_namespace: victoria-metrics
-        create_namespace: true
+        name: traefik
+        chart_ref: traefik
+        chart_repo_url: https://helm.traefik.io/traefik
+        chart_version: "39.0.0"
+        release_namespace: kube-system
         wait: true
-        timeout: 5m
+        timeout: "5m"
         values_files:
-          - "{{ lookup('env', 'HELM_CHARTS_PATH') }}/victoria-metrics/values.yml"
-
+          - "{{ lookup('env', 'HELM_CHARTS_PATH') }}/traefik/values.yml"
