--- a/ansible/playbooks/bootstrap-k3s.yml
+++ b/ansible/playbooks/bootstrap-k3s.yml
@@ -5,6 +5,13 @@
     - group_vars/k3s.yml
 
   pre_tasks:
+    - name: Ensure required environment variables
+      ansible.builtin.assert:
+        that:
+          - lookup('env', 'K3S_TOKEN') != ''
+        fail_msg: "K3S_TOKEN environment variable must be set"
+      run_once: true
+
     - name: Get number of control plane nodes from environment
       ansible.builtin.set_fact:
         num_control_nodes: "{{ lookup('env', 'NUMBER_OF_CONTROL_PLANE_NODES') | default('', true) }}"
