--- a/ansible/playbooks/deploy-tempo.yml
+++ b/ansible/playbooks/deploy-tempo.yml
@@ -2,6 +2,17 @@
   hosts: localhost
   connection: local
   gather_facts: false
+
+  pre_tasks:
+    - name: Ensure required environment variables
+      ansible.builtin.assert:
+        that:
+          - lookup('env', 'KUBECONFIG') != ''
+          - lookup('env', 'HELM_CHARTS_PATH') != ''
+          - lookup('env', 'TEMPO_MINIO_ACCESS_KEY') != ''
+          - lookup('env', 'TEMPO_MINIO_SECRET_KEY') != ''
+        fail_msg: "KUBECONFIG, HELM_CHARTS_PATH, TEMPO_MINIO_ACCESS_KEY, and TEMPO_MINIO_SECRET_KEY environment variables must be set"
+
   tasks:
     - name: Create Tempo namespace
       kubernetes.core.k8s:
