--- a/helm-charts/vector/values.yml
+++ b/helm-charts/vector/values.yml
@@ -20,6 +20,31 @@ env:
     value: "openobserve,kube-system,cnpg-system,grafana,rabbitmq-system,tempo,victoria-metrics,mongodb,redis,rabbitmq"
   - name: ROUTED_NAMESPACES
     value: "kube-system,openobserve,cnpg-system,grafana,cert-manager,rabbitmq-system,tempo,victoria-metrics,mongodb,redis,rabbitmq"
+  - name: APP_NAME
+    valueFrom:
+      configMapKeyRef:
+        name: otel-env-labels
+        key: APP_NAME
+  - name: APP_VERSION
+    valueFrom:
+      configMapKeyRef:
+        name: otel-env-labels
+        key: APP_VERSION
+  - name: REGION
+    valueFrom:
+      configMapKeyRef:
+        name: otel-env-labels
+        key: REGION
+  - name: CLUSTER_ID
+    valueFrom:
+      configMapKeyRef:
+        name: otel-env-labels
+        key: CLUSTER_ID
+  - name: DEPLOYMENT_ENV
+    valueFrom:
+      configMapKeyRef:
+        name: otel-env-labels
+        key: DEPLOYMENT_ENV
 
 resources:
   requests:
@@ -213,6 +238,13 @@ customConfig:
         } else if .source_type == "file" {
           .node_name = get_env_var("HOSTNAME") ?? "unknown_node"
         }
+        
+        # 3. Add resource attributes from environment variables
+        .app_name = get_env_var("APP_NAME") ?? ""
+        .app_version = get_env_var("APP_VERSION") ?? ""
+        .region = get_env_var("REGION") ?? ""
+        .cluster_id = get_env_var("CLUSTER_ID") ?? ""
+        .env = get_env_var("DEPLOYMENT_ENV") ?? ""
     
     # Step 4: Route logs to different streams based on namespace
     log_router:
