--- a/ansible/playbooks/deploy-github-runner.yml
+++ b/ansible/playbooks/deploy-github-runner.yml
@@ -30,7 +30,7 @@
       kubernetes.core.helm:
         name: arc
         chart_ref: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set-controller
-        chart_version: "0.13.1"
+        chart_version: 0.13.1
         release_namespace: "arc-runners"
         create_namespace: true
         wait: true
@@ -40,7 +40,7 @@
       kubernetes.core.helm:
         name: arc-runner-set
         chart_ref: oci://ghcr.io/actions/actions-runner-controller-charts/gha-runner-scale-set
-        chart_version: "0.13.1"
+        chart_version: 0.13.1
         release_namespace: "arc-runners"
         create_namespace: true
         wait: true
