--- a/ansible/playbooks/deploy-grafana.yml
+++ b/ansible/playbooks/deploy-grafana.yml
@@ -79,7 +79,7 @@
       kubernetes.core.helm:
         name: grafana
         chart_ref: oci://ghcr.io/grafana/helm-charts/grafana
-        chart_version: "10.4.3"
+        chart_version: 10.4.3
         release_namespace: grafana
         create_namespace: true
         wait: true
