--- a/ansible/playbooks/deploy-redis.yml
+++ b/ansible/playbooks/deploy-redis.yml
@@ -37,7 +37,7 @@
       kubernetes.core.helm:
         name: redis
         chart_ref: oci://registry-1.docker.io/bitnamicharts/redis
-        chart_version: "24.1.0"
+        chart_version: 24.1.0
         release_namespace: redis
         create_namespace: false
         wait: true
