--- a/ansible/playbooks/deploy-sealed-secrets.yml
+++ b/ansible/playbooks/deploy-sealed-secrets.yml
@@ -16,7 +16,7 @@
         name: sealed-secrets
         chart_ref: sealed-secrets
         chart_repo_url: https://charts.bitnami.com/bitnami
-        chart_version: "2.18.0"
+        chart_version: 2.18.0
         release_namespace: kube-system
         wait: true
-        timeout: "5m"
+        timeout: 5m
