--- a/ansible/playbooks/deploy-mongodb.yml
+++ b/ansible/playbooks/deploy-mongodb.yml
@@ -67,7 +67,7 @@
       kubernetes.core.helm:
         name: mongodb
         chart_ref: oci://registry-1.docker.io/bitnamicharts/mongodb
-        chart_version: "18.1.20"
+        chart_version: 18.1.20
         release_namespace: mongodb
         create_namespace: false
         wait: true
