--- a/helm-charts/otel-collector/values-gateway.yaml
+++ b/helm-charts/otel-collector/values-gateway.yaml
@@ -50,16 +50,11 @@ extraEnvs:
     valueFrom:
       fieldRef:
         fieldPath: spec.nodeName
-  - name: APP_NAME
+  - name: PROJECT_NAME
     valueFrom:
       configMapKeyRef:
         name: otel-env-labels
-        key: APP_NAME
-  - name: APP_VERSION
-    valueFrom:
-      configMapKeyRef:
-        name: otel-env-labels
-        key: APP_VERSION
+        key: PROJECT_NAME
   - name: REGION
     valueFrom:
       configMapKeyRef:
@@ -291,11 +286,8 @@ config:
     # Add external labels as resource attributes
     resource:
       attributes:
-        - key: app.name
-          value: ${env:APP_NAME}
-          action: upsert
-        - key: app.version
-          value: ${env:APP_VERSION}
+        - key: project.name
+          value: ${env:PROJECT_NAME}
           action: upsert
         - key: region
           value: ${env:REGION}
@@ -306,8 +298,7 @@ config:
         - key: env
           value: ${env:DEPLOYMENT_ENV}
           action: upsert
-    # Convert these attributes to strings (Helm's toYaml strips quotes, causing them to be parsed as integers, like 1 instead of "1")
-    # Using Concat() to convert to string since there's no string() function in OTTL
+    # Convert these attributes to strings
     transform:
       error_mode: ignore
       trace_statements:
@@ -340,7 +331,7 @@ config:
       resource_to_telemetry_conversion:
         enabled: true
       remote_write_queue:
-        queue_size: 20  # ~60 MB max (20 batches × 3 MB per batch)
+        queue_size: 20 # ~60 MB max (20 batches × 3 MB per batch)
       retry_on_failure:
         max_elapsed_time: 2m
 
@@ -353,7 +344,7 @@ config:
         stream-name: "services"
         Authorization: "${env:OPENOBSERVE_AUTH_B64}"
       sending_queue:
-        queue_size: 5  # ~60 MB max (5 batches × ~12 MB per batch)
+        queue_size: 5 # ~60 MB max (5 batches × ~12 MB per batch)
       retry_on_failure:
         max_elapsed_time: 2m
 
