--- a/ansible/playbooks/deploy-sealed-secrets.yaml
+++ b/ansible/playbooks/deploy-sealed-secrets.yaml
@@ -11,22 +11,12 @@
         fail_msg: "KUBECONFIG environment variable must be set"
 
   tasks:
-    - name: Install Sealed Secrets Controller from GitHub
-      ansible.builtin.command: >
-        kubectl apply -f https://github.com/bitnami-labs/sealed-secrets/releases/download/v0.26.0/controller.yaml
-      register: sealed_secrets_apply_result
-      retries: 3
-      delay: 5
-      until: sealed_secrets_apply_result.rc == 0
-      failed_when: false
-      changed_when: sealed_secrets_apply_result.rc == 0
-
-    - name: Wait for Sealed Secrets Controller deployment
-      kubernetes.core.k8s_info:
-        kind: Deployment
-        namespace: kube-system
-        name: sealed-secrets-controller
-      register: sealed_secrets_deployment
-      until: sealed_secrets_deployment.resources[0].status.readyReplicas | default(0) >= 1
-      retries: 30
-      delay: 10
+    - name: Install Sealed Secrets Controller
+      kubernetes.core.helm:
+        name: sealed-secrets
+        chart_ref: sealed-secrets
+        chart_repo_url: https://charts.bitnami.com/bitnami
+        chart_version: 2.18.0
+        release_namespace: kube-system
+        wait: true
+        timeout: 5m
