--- a/ansible/playbooks/deploy-traefik.yaml
+++ b/ansible/playbooks/deploy-traefik.yaml
@@ -22,4 +22,4 @@
         wait: true
         timeout: 5m
         values_files:
-          - "{{ lookup('env', 'HELM_CHARTS_PATH') }}/traefik/values.yml"
+          - "{{ lookup('env', 'HELM_CHARTS_PATH') }}/traefik/values.yaml"
