--- a/ansible/playbooks/group_vars/github-runners.yaml
+++ b/ansible/playbooks/group_vars/github-runners.yaml
@@ -1,5 +1,5 @@
 # GitHub Runners Configuration Variables
-# These variables are used by the deploy-github-runner.yml playbook
+# These variables are used by the deploy-github-runner.yaml playbook
 
 # This controls how many runners can exist total (scaling)
 # AND how many cache slots we create per node.
