--- a/.github/workflows/ci-cd.prod.yaml
+++ b/.github/workflows/ci-cd.prod.yaml
@@ -5,7 +5,7 @@ on:
     paths:
       - 'ansible/**/*'
       - 'Dockerfile*'
-      - '.github/workflows/ci-cd.prod.yml'
+      - '.github/workflows/ci-cd.prod.yaml'
   pull_request:
     paths:
       - 'ansible/**/*'
@@ -32,7 +32,7 @@ jobs:
         run: |
           # Configuration
           DOCKERFILES_PATTERNS=("Dockerfile.ansible.prod")
-          ANSIBLE_REQUIREMENTS_PATTERNS=("ansible/requirements.yml" "ansible/ansible.cfg")
+          ANSIBLE_REQUIREMENTS_PATTERNS=("ansible/requirements.yaml" "ansible/ansible.cfg")
           ANSIBLE_PATTERN="ansible/"
           
             CHANGED_FILES=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} 2>/dev/null || echo "")
