--- a/.github/workflows/reusable-cross-repo-dependencies.yaml
+++ b/.github/workflows/reusable-cross-repo-dependencies.yaml
@@ -1,4 +1,3 @@
-# cross-repo-dependencies.yml
 name: Reusable Cross-Repo Dependencies Checker
 
 on:
@@ -19,7 +18,7 @@ on:
       template_workflow:
         required: false
         type: string
-        default: 'ci-cd.prod.yml'
+        default: 'ci-cd.prod.yaml'
       runner:
         description: 'Runner to use. Options: "ubuntu-latest" or "self-hosted"'
         required: false
