--- a/ansible/playbooks/bootstrap-rke2.yaml
+++ b/ansible/playbooks/bootstrap-rke2.yaml
@@ -2,7 +2,7 @@
   hosts: all
   become: true
   vars_files:
-    - group_vars/rke2.yml
+    - group_vars/rke2.yaml
   pre_tasks:
     - name: Ensure required environment variables
       ansible.builtin.assert:
