--- a/ansible/playbooks/deploy-operators.yaml
+++ b/ansible/playbooks/deploy-operators.yaml
@@ -33,7 +33,7 @@
 
     - name: Install RabbitMQ Cluster Operator
       ansible.builtin.command: >
-        kubectl apply -f https://github.com/rabbitmq/cluster-operator/releases/download/v2.18.0/cluster-operator.yml
+        kubectl apply -f https://github.com/rabbitmq/cluster-operator/releases/download/v2.18.0/cluster-operator.yaml
       register: rabbitmq_operator_result
       retries: 3
       delay: 5
