--- a/ansible/playbooks/deploy-tempo.yaml
+++ b/ansible/playbooks/deploy-tempo.yaml
@@ -102,7 +102,7 @@
         wait: true
         timeout: 5m
         values_files:
-          - "{{ lookup('env', 'HELM_CHARTS_PATH') }}/tempo/values.yml"
+          - "{{ lookup('env', 'HELM_CHARTS_PATH') }}/tempo/values.yaml"
         set_values:
           - value: tempo.structuredConfig.storage.trace.s3.access_key={{ lookup('env', 'TEMPO_MINIO_ACCESS_KEY') }}
             value_type: string
