--- a/helm-charts/otel-collector/values-gateway.yaml
+++ b/helm-charts/otel-collector/values-gateway.yaml
@@ -43,7 +43,7 @@ extraEnvs:
   - name: OPENOBSERVE_AUTH_B64
     valueFrom:
       secretKeyRef:
-        name: openobserve-creds
+        name: openobserve-auth-creds
         key: auth_b64
   - name: K8S_NODE_NAME
     valueFrom:
@@ -335,7 +335,7 @@ config:
       headers:
         organization: "SkiesDota"
         stream-name: "services"
-        Authorization: "${env:OPENOBSERVE_AUTH_B64}"
+        Authorization: "Basic ${env:OPENOBSERVE_AUTH_B64}"
       sending_queue:
         queue_size: 5 # ~60 MB max (5 batches × ~12 MB per batch)
       retry_on_failure:
