--- a/ansible/playbooks/deploy-otel-collector.yaml
+++ b/ansible/playbooks/deploy-otel-collector.yaml
@@ -56,7 +56,7 @@
           apiVersion: v1
           kind: ConfigMap
           metadata:
-            name: otel-env-labels
+            name: cluster-labels
             namespace: otel-collector
           data:
             PROJECT_NAME: "{{ lookup('env', 'PROJECT_NAME') }}"
